--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-src/CMakeLists.txt filter=gitignore
 *.cpp text eol=lf
 *.h text eol=lf
 *.c text eol=lf
@@ -6,3 +5,10 @@ src/CMakeLists.txt filter=gitignore
 *.cmake text eol=lf
 *.sh text eol=lf
 *.py text eol=lf
+*.yml text eol=lf
+*.md text eol=lf
+*.txt text eol=lf
+*.in text eol=lf
+*.rc text eol=lf
+*.qrc text eol=lf
+*.ui text eol=lf
