--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rdparty/nodeeditor"]
 	path = 3rdparty/nodeeditor
-	url = git@github.com:QianMoth/nodeeditor.git
+	url = https://github.com/QianMoth/nodeeditor.git
